@@ -1,3 +1,6 @@
+2012-08-20 dschulze@adobe.com
+	Allow <shape>, child and select() values for 'clip-path'.
+
 2012-08-15 dschulze@adobe.com
 	Added issues that feature need to be proofed for 'mask-attachment', 'mask-origin' and 'mask-clip'
 	Replaced more PNG images with SVG
